--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cli": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "expo": "^53.0.20",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
